# ACC_constellation

./: .gitignore  CMakeLists.txt
include/: ACC.h  ACCReceiverSatellite.hpp  ACCTransmitterSatellite.hpp  ACDC.h
src/: ACC.cpp  ACCReceiverSatellite.cpp  ACCReceiverSatelliteGenerator.cpp  ACCTransmitterSatellite.cpp  ACCTransmitterSatelliteGenerator.cpp  ACDC.cpp  EthernetInterface.cpp
